--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,19 +4,15 @@ stages:
 
 compile scala sources:
   stage: build
-  tags:
-    - aws
   script:
     - sbt test:compile
 
 sbt test:
   stage: test
-  tags:
-    - aws
   script:
     - sbt coverage test coverageReport
 
-image: colisweb/scala-sbt-gke:adoptjdk11-1.2.8-8.11.3-9.2.6.0
+image: hseeberger/scala-sbt:11.0.3_1.2.8_2.12.8
 variables:
   SBT_OPTS: "-Dsbt.global.base=sbt-cache/sbtboot -Dsbt.boot.directory=sbt-cache/boot -Dsbt.ivy.home=sbt-cache/ivy"
   COURSIER_CACHE: "sbt-cache/coursier"
