--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ publish on bintray:
   script:
     - sbt -Dbintray.user=gitlab-ci -Dbintray.pass=$BINTRAY_API_KEY publish
 
-image: 949316342391.dkr.ecr.eu-west-1.amazonaws.com/toutatis-infra/docker-infra-builder:master
+image: hseeberger/scala-sbt:11.0.3_1.2.8_2.12.8
 variables:
   SBT_OPTS: "-Dsbt.global.base=sbt-cache/sbtboot -Dsbt.boot.directory=sbt-cache/boot -Dsbt.ivy.home=sbt-cache/ivy"
   COURSIER_CACHE: "sbt-cache/coursier"
@@ -31,5 +31,11 @@ cache:
 
 before_script:
 - gpg --import  <(echo "$GITLAB_PGP_PRIVATE_KEY")
+- apk --no-cache add git
+- apk --no-cache add --virtual build-dependencies make
+- git clone https://github.com/sobolevn/git-secret.git git-secret
+- cd git-secret && make build
+- PREFIX="/usr/local" make install
+- cd .. && rm -Rf git-secret
 - git secret reveal
 - source secrets-env.sh
