Apply suggestion to .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,13 +30,6 @@ cache:
     - sbt-cache
 
 before_script:
+
 - gpg --import  <(echo "$GITLAB_PGP_PRIVATE_KEY")
-- apt-get install git
-- apt-get install -y gawk
-- apt-get install make
-- git clone https://github.com/sobolevn/git-secret.git git-secret
-- cd git-secret && make build
-- PREFIX="/usr/local" make install
-- cd .. && rm -Rf git-secret
-- git secret reveal
-- source secrets-env.sh
+- gpg -q --decrypt secrets-env.sh | source
