Fix decrypt command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,5 @@ cache:
     - sbt-cache
 
 before_script:
-
 - gpg --import  <(echo "$GITLAB_PGP_PRIVATE_KEY")
-- gpg -q --decrypt secrets-env.sh | source
+- gpg -q --decrypt secrets-env.sh.secret | source
