--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,4 +31,4 @@ cache:
 
 before_script:
   - gpg --import  <(echo "$GITLAB_PGP_PRIVATE_KEY")
-  - eval "$(gpg -q --decrypt secrets-env.sh.secret)"
+  - source <(gpg -q --decrypt secrets-env.sh.secret)
