--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
 include:
-  - 'https://gitlab.com/colisweb-open-source/ci-common/raw/v7.9.1/templates/scala.yml'
+  - 'https://gitlab.com/colisweb-open-source/ci-common/raw/v9.0.6/templates/scala.yml'
+
+format:
+  extends: .sbt-format
+  tags: []
 
 test skills:
   extends: .sbt-test
